[#11258] Invocation - invokeBatch and InvocationBuilder.buildBatch